--- a/index.html
+++ b/index.html
@@ -72,16 +72,9 @@
       </div>
     </section>
     <section id="about">
-      <p class="section__text__p1">Get To Know More</p>
+      <!-- <p class="section__text__p1">Get To Know More</p> -->
       <h1 class="title">About Me</h1>
       <div class="section-container">
-        <div class="section__pic-container">
-          <img
-            src="./assets/about-pic.png"
-            alt="Profile picture"
-            class="about-pic"
-          />
-        </div>
         <div class="about-details-container">
           <div class="text-container">
             <p>
@@ -231,7 +224,7 @@
                 Source Code
               </button>
               <button
-                class="btn btn-color-2 project-btn"
+                class="btn btn-color-2 project-btn live-btn"
                 onclick="location.href='https://sudosami.github.io/CineMate/'"
               >
                 Live Demo
@@ -255,7 +248,7 @@
                 Source Code
               </button>
               <button
-                class="btn btn-color-2 project-btn"
+                class="btn btn-color-2 project-btn live-btn"
                 onclick="location.href='https://sudosami.github.io/tic-tac-toe-react/'"
               >
                 Live Demo
