changed live btn css, adjusted footer

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
+                  <h3>Git & GitHub</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
