--- a/index.html
+++ b/index.html
@@ -243,6 +243,30 @@
               </button>
             </div>
           </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/weather-app.png"
+                alt="Project 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">Weather App</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="location.href='https://github.com/sudoSami/weather-app'"
+              >
+                Source Code
+              </button>
+              <button
+                class="btn btn-color-2 project-btn live-btn"
+                onclick="location.href='https://sudosami.github.io/weather-app/'"
+              >
+                Live Demo
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </section>
